--- a/Ch02/Ch02.vcxproj
+++ b/Ch02/Ch02.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="QueueArray2.c" />
+    <ClCompile Include="QueueLinkedList.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
