--- a/Ch01/Ch01.vcxproj.filters
+++ b/Ch01/Ch01.vcxproj.filters
@@ -36,5 +36,11 @@
     <ClCompile Include="array1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="arrayAndPointer.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="array2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
