--- a/Ch02/Ch02.vcxproj.filters
+++ b/Ch02/Ch02.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="linkedList1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="linkedList2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
