0522 수업코드 - 미로찾기

--- a/Ch02/Ch02.vcxproj
+++ b/Ch02/Ch02.vcxproj
@@ -19,7 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mazeSearch.c" />
+    <ClCompile Include="mazeSearch.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="mazeSearchPushPopPrint.c" />
     <ClCompile Include="stackLinkedList.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
