--- a/Ch02/Ch02.vcxproj.filters
+++ b/Ch02/Ch02.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="mazeSearch.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="mazeSearchPushPopPrint.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
