--- a/Ch03/Ch03.vcxproj
+++ b/Ch03/Ch03.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="treeTraversal2.c" />
+    <ClCompile Include="Test.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
